--- a/views/ejs/productosEjs.ejs
+++ b/views/ejs/productosEjs.ejs
@@ -26,7 +26,9 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <% productos.forEach((producto)=> { %>
+                            <% 
+                            if (productos){
+                                productos.forEach((producto)=> { %>
                                 <tr>
                                     <td>
                                         <%= producto.id %>
@@ -41,7 +43,17 @@
                                         <%= producto.thumbail %>
                                     </td>
                                 </tr>                               
-                            <% }) %>
+                            <% 
+                                })
+                            }else { %>
+                                <tr>
+                                    <td colspan="4">
+                                        <h3>NO HAY PRODUCTOS</h3>
+                                    </td>
+                                </tr>
+                            <%
+                            }
+                            %>
                         </tbody>
                     </table>
                 </div>
